<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>it.smartcommunitylabdhub</groupId>
    <artifactId>digitalhub-core</artifactId>
    <name>digitalhub-core</name>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <revision>0.7.0-SNAPSHOT</revision>
        <java.version>21</java.version>
        <spring-boot.version>3.3.2</spring-boot.version>
        <spring-security.version>6.3.1</spring-security.version>
        <springdoc.version>2.2.0</springdoc.version>
        <jackson.version>2.16.2</jackson.version>
        <slf4j.version>2.0.9</slf4j.version>
        <kubernetes.version>21.0.0-legacy</kubernetes.version>
        <maven.compiler.release>21</maven.compiler.release>
        <lombok.version>1.18.34</lombok.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <checkstyle.config.location>checkstyle/checkstyle.xml</checkstyle.config.location>
        <checkstyle.failOnViolation>false</checkstyle.failOnViolation>
    </properties>

    <modules>
        <module>modules/commons</module>
        <module>modules/authorization</module>
        <module>modules/fsm</module>
        <module>modules/framework-k8s</module>
        <module>modules/framework-kaniko</module>
        <module>modules/runtime-container</module>
        <module>modules/runtime-dbt</module>
        <module>modules/runtime-nefertem</module>
        <module>modules/runtime-kfp</module>
        <module>modules/runtime-python</module>
        <module>modules/runtime-model-serve</module>
        <module>modules/openmetadata-integration</module>
        <module>modules/files</module>
        <module>frontend</module>
        <module>application</module>
    </modules>


    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
        </plugins>
    </reporting>
</project>